4568.	[contrib]	Added a --with-bind option to the dnsperf configure
			script to specify BIND prefix path.

4567.	[port]		Call getprotobyname and getservbyname prior to calling
			chroot so that shared libraries get loaded. [RT #44537]

4564.	[maint]		Update the built in managed keys to include the
			upcoming root KSK. [RT #44579]

4561.	[port]		Silence a warning in strict C99 compilers. [RT #44414]

4560.	[bug]		mdig: add -m option to enable memory debugging rather
			than having it on all the time. [RT #44509]

4559.	[bug]		openssl_link.c didn't compile if ISC_MEM_TRACKLINES
			was turned off.  [RT #44509]

4558.	[bug]		Synthesised CNAME before matching DNAME was still
			being cached when it should not have been.  [RT #44318]

4557.	[security]	Combining dns64 and rpz can result in dereferencing
			a NULL pointer (read).  (CVE-2017-3135) [RT#44434]

4554.	[bug]		Remove double unlock in dns_dispatchmgr_setudp.
			[RT #44336]

4553.	[bug]		Named could deadlock there were multiple changes to
			NSEC/NSEC3 parameters for a zone being processed at
			the same time. [RT #42770]

4552.	[bug]		Named could trigger a assertion when sending notify
			messages. [RT #44019]

4551.	[test]		Add system tests for integrity checks of MX and
			SRV records. [RT #43953]

4550.	[cleanup]	Increased the number of available master file
			output style flags from 32 to 64. [RT #44043]

	--- 9.9.10b1 released ---

4543.	[bug]		dns_client_startupdate now delays sending the update
			request until isc_app_ctxrun has been called.
			[RT #43976]

4541.	[bug]		rndc addzone should properly reject non master/slave
			zones. [RT #43665]

4539.	[bug]		Referencing a nonexistent zone with RPZ could lead
			to a assertion failure when configuring. [RT #43787]

4538.	[bug]		Call dns_client_startresolve from client->task.
			[RT #43896]

4537.	[bug]		Handle timeouts better in dig/host/nslookup. [RT #43576]

4535.	[bug]		Address race condition in setting / testing of