@@ -1,3 +1,7 @@
+4570.	[cleanup]	named did not correctly fall back to the built-in
+			initializing keys if the bind.keys file was present
+			but empty. [RT #44531]
+
 4568.	[contrib]	Added a --with-bind option to the dnsperf configure
 			script to specify BIND prefix path.
 
